--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ python:
  - "3.4"
  - "3.5"
  - "pypy"
+ - "pypy3.3-5.2-alpha1"
  - "nightly"
-install: pip install .
+install:
+ - pip install virtualenv==15.0.2
+ - pip install .
 script: tox
-branches:
-  only:
-    - master
 matrix:
   fast_finish: true
