Use platform.python_implementation and no wheel (more versions)

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,20 @@ python:
  - "3.5"
 
 env:
+ - SETUPTOOLS_VERSION=0.6c11
+ - SETUPTOOLS_VERSION=0.9.8
+ - SETUPTOOLS_VERSION=1.4.2
+ - SETUPTOOLS_VERSION=2.2
+ - SETUPTOOLS_VERSION=3.8.1
+ - SETUPTOOLS_VERSION=4.0.1
+ - SETUPTOOLS_VERSION=5.8
+ - SETUPTOOLS_VERSION=6.1
+ - SETUPTOOLS_VERSION=7.0
+ - SETUPTOOLS_VERSION=8.3
+ - SETUPTOOLS_VERSION=9.1
+ - SETUPTOOLS_VERSION=10.2.1
+ - SETUPTOOLS_VERSION=11.3.1
+ - SETUPTOOLS_VERSION=12
  - SETUPTOOLS_VERSION=13.0.2
  - SETUPTOOLS_VERSION=14.3
  - SETUPTOOLS_VERSION=15.2
