--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 
 env:
  - SETUPTOOLS_VERSION=0.6c11
+ - SETUPTOOLS_VERSION=0.7.8
+ - SETUPTOOLS_VERSION=0.8
  - SETUPTOOLS_VERSION=0.9.8
  - SETUPTOOLS_VERSION=1.4.2
  - SETUPTOOLS_VERSION=2.2
