Retry with Python 3.2 and PyPy3 5.2 alpha

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,35 +2,18 @@ sudo: false
 language: python
 python:
  - 2.7
+ - 3.2
+ - pypy3.3-5.2-alpha1
 
 env:
  - SETUPTOOLS_VERSION=0.6c11
- - SETUPTOOLS_VERSION=0.7.8
- - SETUPTOOLS_VERSION=0.8
- - SETUPTOOLS_VERSION=0.9.8
- - SETUPTOOLS_VERSION=1.4.2
  - SETUPTOOLS_VERSION=2.2
- - SETUPTOOLS_VERSION=3.8.1
- - SETUPTOOLS_VERSION=4.0.1
- - SETUPTOOLS_VERSION=5.8
- - SETUPTOOLS_VERSION=6.1
- - SETUPTOOLS_VERSION=7.0
- - SETUPTOOLS_VERSION=8.3
- - SETUPTOOLS_VERSION=9.1
- - SETUPTOOLS_VERSION=10.2.1
  - SETUPTOOLS_VERSION=11.3.1
  - SETUPTOOLS_VERSION=12
  - SETUPTOOLS_VERSION=13.0.2
- - SETUPTOOLS_VERSION=14.3
- - SETUPTOOLS_VERSION=15.2
  - SETUPTOOLS_VERSION=16.0
- - SETUPTOOLS_VERSION=17.1.1
- - SETUPTOOLS_VERSION=18.8
- - SETUPTOOLS_VERSION=19.7
  - SETUPTOOLS_VERSION=20.10.1
  - SETUPTOOLS_VERSION=21.2.2
- - SETUPTOOLS_VERSION=22.0.5
- - SETUPTOOLS_VERSION=23.2.1
  - SETUPTOOLS_VERSION=24.0.3
 
 before_install:
