--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ env:
  - SETUPTOOLS_VERSION=20.10.1
  - SETUPTOOLS_VERSION=21.2.2
  - SETUPTOOLS_VERSION=24.0.3
+ global:
+  -VIRTUALENV_DOWNLOAD=no
 
 before_install:
  # Save the setuptools version
