--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,16 @@ python:
  - pypy3.3-5.2-alpha1
 
 env:
- - SETUPTOOLS_VERSION=0.6c11
- - SETUPTOOLS_VERSION=2.2
- - SETUPTOOLS_VERSION=11.3.1
- - SETUPTOOLS_VERSION=12
- - SETUPTOOLS_VERSION=13.0.2
- - SETUPTOOLS_VERSION=16.0
- - SETUPTOOLS_VERSION=20.10.1
- - SETUPTOOLS_VERSION=21.2.2
- - SETUPTOOLS_VERSION=24.0.3
+ matrix:
+  - SETUPTOOLS_VERSION=0.6c11
+  - SETUPTOOLS_VERSION=2.2
+  - SETUPTOOLS_VERSION=11.3.1
+  - SETUPTOOLS_VERSION=12
+  - SETUPTOOLS_VERSION=13.0.2
+  - SETUPTOOLS_VERSION=16.0
+  - SETUPTOOLS_VERSION=20.10.1
+  - SETUPTOOLS_VERSION=21.2.2
+  - SETUPTOOLS_VERSION=24.0.3
  global:
   -VIRTUALENV_DOWNLOAD=no
 
