--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ python:
  - 3.3
  - 3.4
  - 3.5
+ - 3.5-dev
+ - nightly
  - pypy
  - pypy3
  - pypy3.3-5.2-alpha1
@@ -18,10 +20,18 @@ env:
   - SETUPTOOLS_VERSION=11.3.1
   - SETUPTOOLS_VERSION=12
   - SETUPTOOLS_VERSION=13.0.2
+  - SETUPTOOLS_VERSION=14.3
+  - SETUPTOOLS_VERSION=15.2
   - SETUPTOOLS_VERSION=16.0
+  - SETUPTOOLS_VERSION=17.1.1
+  - SETUPTOOLS_VERSION=18.8
+  - SETUPTOOLS_VERSION=19.7
   - SETUPTOOLS_VERSION=20.10.1
   - SETUPTOOLS_VERSION=21.2.2
+  - SETUPTOOLS_VERSION=22.0.5
+  - SETUPTOOLS_VERSION=23.2.1
   - SETUPTOOLS_VERSION=24.0.3
+
  global:
   -VIRTUALENV_DOWNLOAD=no
 
@@ -32,9 +42,9 @@ before_install:
 install:
  - pip install --upgrade setuptools==$SETUPTOOLS_VERSION wheel
  - python setup.py install
- - python setup.py bdist_wheel
+ - if [ $SETUPTOOLS_VERSION != "0.6c11" ]; then python setup.py bdist_wheel ; fi
  - pip install --upgrade setuptools==$ORIG_SETUPTOOLS_VERSION
- - pip install ./dist/tox_travis-*.whl
+ - if [ $SETUPTOOLS_VERSION != "0.6c11" ]; then pip install ./dist/tox_travis-*.whl ; fi
 script:
  - tox
 
