Re-add more setuptools versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,17 @@ python:
 env:
  matrix:
   - SETUPTOOLS_VERSION=0.6c11
+  - SETUPTOOLS_VERSION=0.9.8
+  - SETUPTOOLS_VERSION=1.4.2
   - SETUPTOOLS_VERSION=2.2
+  - SETUPTOOLS_VERSION=3.8.1
+  - SETUPTOOLS_VERSION=4.0.1
+  - SETUPTOOLS_VERSION=5.8
+  - SETUPTOOLS_VERSION=6.1
+  - SETUPTOOLS_VERSION=7.0
+  - SETUPTOOLS_VERSION=8.3
+  - SETUPTOOLS_VERSION=9.1
+  - SETUPTOOLS_VERSION=10.2.1
   - SETUPTOOLS_VERSION=11.3.1
   - SETUPTOOLS_VERSION=12
   - SETUPTOOLS_VERSION=13.0.2
@@ -30,6 +40,9 @@ env:
   - SETUPTOOLS_VERSION=21.2.2
   - SETUPTOOLS_VERSION=22.0.5
   - SETUPTOOLS_VERSION=23.2.1
+  - SETUPTOOLS_VERSION=24.0
+  - SETUPTOOLS_VERSION=24.0.1
+  - SETUPTOOLS_VERSION=24.0.2
   - SETUPTOOLS_VERSION=24.0.3
 
  global:
