--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
 sudo: false
 language: python
 python:
- - 3.4
+ - pypy
+ - pypy-5.3.1
  - pypy3
  - pypy3.3-5.2-alpha1
- - 3.2
  - 2.6
  - 2.7
+ - 3.2
+ - 3.4
  - 3.3
  - 3.5
  - 3.5-dev
  - nightly
- - pypy
 
 env:
  matrix:
-  - SETUPTOOLS_VERSION=0.6c11
   - SETUPTOOLS_VERSION=0.9.8
   - SETUPTOOLS_VERSION=1.4.2
   - SETUPTOOLS_VERSION=2.2
@@ -34,7 +34,10 @@ env:
   - SETUPTOOLS_VERSION=15.2
   - SETUPTOOLS_VERSION=16.0
   - SETUPTOOLS_VERSION=17.1.1
-  - SETUPTOOLS_VERSION=18.8
+  - SETUPTOOLS_VERSION=18.4
+  - SETUPTOOLS_VERSION=18.5  # -8 all fail according to https://gsnedders.github.io/python-marker-test/results.html
+  - SETUPTOOLS_VERSION=19.0  # also fails, but was fixed in 19.1
+  - SETUPTOOLS_VERSION=19.1
   - SETUPTOOLS_VERSION=19.7
   - SETUPTOOLS_VERSION=20.10.1
   - SETUPTOOLS_VERSION=21.2.2
@@ -44,6 +47,60 @@ env:
   - SETUPTOOLS_VERSION=24.0.1
   - SETUPTOOLS_VERSION=24.0.2
   - SETUPTOOLS_VERSION=24.0.3
+
+matrix:
+ allow_failures:
+  - env: SETUPTOOLS_VERSION=0.9.8
+  - env: SETUPTOOLS_VERSION=1.4.2
+  - env: SETUPTOOLS_VERSION=18.5
+  - env: SETUPTOOLS_VERSION=19.0
+  - python: 3.5
+    env: SETUPTOOLS_VERSION=14.3
+ include:
+  - python: 2.6
+    env: SETUPTOOLS_VERSION=0.6c11
+  - python: 2.7
+    env: SETUPTOOLS_VERSION=0.6c11
+  - python: pypy
+    env: SETUPTOOLS_VERSION=0.6c11
+  - python: pypy-5.3.1
+    env: SETUPTOOLS_VERSION=0.6c11
+ exclude:
+  # python setup.py bdist_wheel fails until setuptools v19
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=0.6c11
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=2.2
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=3.8.1
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=4.0.1
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=5.8
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=6.1
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=7.0
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=8.3
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=9.1
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=10.2.1
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=11.3.1
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=12
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=13.0.2
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=14.3
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=15.2
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=16.0
+  - python: pypy3.3-5.2-alpha1
+    env: SETUPTOOLS_VERSION=17.1.1
 
 before_install:
  # Save the setuptools version
