--- a/.travis.yml
+++ b/.travis.yml
@@ -16,17 +16,13 @@ before_install:
  # Show the current setuptools version
  - python -c "import setuptools; print(setuptools.__version__)"
 install:
- - pip install wheel
+ - pip install wheel tox==2.1.1
  - python setup.py install bdist_wheel
  - pip install ./dist/tox_travis-*.whl
 script:
  - tox
  - tox --installpkg ./dist/tox_travis-*.whl
 
-branches:
-  only:
-    - master
-    - /^\d+(\.\d+)*$/
 matrix:
   fast_finish: true
 
