--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
  - "pypy3"
  - "pypy-5.3"
  - "pypy3.3-5.2-alpha1"
- - "nightly"
+ - "3.6-dev"
 
 before_install:
  # Show the current setuptools version
