--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,19 +1,15 @@
 # To activate, change the Appveyor settings to use `.appveyor.yml`.
 environment:
   matrix:
-    - TOXENV: py27
-    - TOXENV: py33
-    - TOXENV: py34
-    - TOXENV: py35
-    - TOXENV: py36
+    - TOXENV: pypy
 
 install:
+  - ps: (New-Object Net.WebClient).DownloadFile('https://bitbucket.org/pypy/pypy/downloads/pypy3-2.4.0-win32.zip', "$env:appveyor_build_folder\pypy3-2.4.0-win32.zip")
+  - ps: 7z x pypy3-2.4.0-win32.zip | Out-Null
+  - ps: $env:path = "$env:appveyor_build_folder\pypy3-2.4.0-win32;$env:path"
   - pip install tox
 
 build: false  # Not a C# project, build stuff at the test step instead.
 
 test_script:
   - tox
-
-matrix:
-  fast_finish: true
