Add testing on Python 3.7

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = py26, py27, py34, py35, py36, pypy, pypy3, docs, desc
+envlist = py26, py27, py34, py35, py36, py37, pypy, pypy3, docs, desc
 
 [testenv]
 # Coverage doesn't work on PyPy
 deps =
     pytest
     pytest-mock
-    py{26,27,33,34,35,36}: coverage_pth
+    py{26,27,33,34,35,36,37}: coverage_pth
 setenv =
     COVERAGE_PROCESS_START=.coveragerc
 commands = {posargs:py.test}
