--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ language: python
 python:
  - "2.6"
  - "2.7"
+ - "3.3"
  - "3.4"
  - "3.5"
  - "3.6"
  - "pypy"
  - "pypy3"
+ - "pypy3.3-5.2-alpha1"
+ - "pypy3.3-5.5-alpha"
 
 install:
   - pip install wheel codecov coverage
