--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     py{26,27,33,34,35,36,37}: coverage_pth
 setenv =
     COVERAGE_PROCESS_START=.coveragerc
-commands = {posargs:py.test}
+commands = {posargs:py.test -v}
 
 [testenv:docs]
 changedir = docs
